# hmoog-native

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  package.json  pnpm-lock.yaml
lib/: index.d.ts  index.js
src/: native-win32.cpp  native.cpp  native.hpp
